# arcanoid

./: CMakeLists.txt  README.md  TODO.txt
Arcanoid/: Arcanoid.cpp  CMakeLists.txt  colors.h  config.h  direction.h
Arcanoid/App/: App.cpp  App.h
Arcanoid/Ball/: Ball.cpp  Ball.h
Arcanoid/BaseScene/: BaseScene.cpp  BaseScene.h
Arcanoid/Block/: Block.cpp  Block.h
Arcanoid/Button/: Button.cpp  Button.h
Arcanoid/Circle/: Circle.cpp  Circle.h
Arcanoid/ColorTransition/: ColorTransition.cpp  ColorTransition.h
Arcanoid/EventManager/: EventManager.cpp  EventManager.h
Arcanoid/Game/: Game.cpp  Game.h  utils.h
Arcanoid/Home/: Home.cpp  Home.h
Arcanoid/HorizontalPlatform/: HorizontalPlatform.cpp  HorizontalPlatform.h
Arcanoid/MultiBlock/: MultiBlock.cpp  MultiBlock.h
Arcanoid/Object/: Object.cpp  Object.h
Arcanoid/Platform/: Platform.cpp  Platform.h
Arcanoid/Rect/: Rect.cpp  Rect.h
Arcanoid/SolidBlock/: SolidBlock.cpp  SolidBlock.h
Arcanoid/VerticalLayout/: VerticalLayout.cpp  VerticalLyout.h
Arcanoid/VerticalPlatform/: VerticalPlatform.cpp  VerticalPlatform.h
